# GhettoGlitcher

./: CMakeLists.txt  ghettoglitcher.cpp  ghettoglitcher.hpp  hardware_map.hpp  picowhisperer.cpp  platformio.ini  serial_console.cpp  serial_console.hpp  serial_trigger.cpp  serial_trigger.hpp  test.py  trigger.hpp
src/: generic_trigger.hpp  hardware_map.hpp  main.cpp  main.hpp  serial_console.cpp  serial_console.hpp  serial_trigger.cpp  serial_trigger.hpp  signal_trigger.cpp  signal_trigger.hpp  system_util.hpp
test/: spi_trigger.cpp  spi_trigger.hpp
